--- a/src/app/components/adminnavigation/adminnavigation.component.html
+++ b/src/app/components/adminnavigation/adminnavigation.component.html
@@ -7,6 +7,7 @@
             <ul>
                 <li><a [routerLink]="['/AddFlight']">Create Flight</a></li>
                 <li><a [routerLink]="['/ViewAllFlights']">Display all Flights</a></li>
+                <li><a [routerLink]="['/AdminLogin']">Admin Login</a></li>
             </ul>
         </div>
     </header> 
