--- a/src/app/components/viewallflights/viewallflights.component.css
+++ b/src/app/components/viewallflights/viewallflights.component.css
@@ -30,10 +30,12 @@
     }
 .h1
 {
-    font-family: 'Rubik';
     font-size:30px;
     padding-top: 40px;
     padding-bottom: 10px;
+    font-family: 'Rubik' , sans-serif;
+    font-weight: 600;
+        
 }
     .th
     {
@@ -124,5 +126,6 @@
         padding-bottom: 12px;
         border-top-left-radius: 5px;
         border-bottom-left-radius: 5px;
+      
         
     }
