--- a/src/app/components/deleteflight/deleteflight.component.html
+++ b/src/app/components/deleteflight/deleteflight.component.html
@@ -20,7 +20,7 @@
                 </thead>
                 <tbody>
                     <tr class="tr">
-                        <td class="td">{{flight.FlightNumber}}</td>
+                        <td class="td">{{flight.flight_number}}</td>
                         <td class="td">{{flight.departure_location}}</td>
                         <td class="td">{{flight.arrival_location}}</td>
                         <td class="td">{{flight.departure_time}}</td>
@@ -30,7 +30,7 @@
                     
                     <tr class="tbt">
                         <td colspan="7">
-                            <button class="bt delete" type="submit" (click)="delete(flight.FlightNumber)" onclick="window.location='http://localhost:4200/ViewAllFlights'">Delete Flight</button>
+                            <button class="bt delete" type="submit" (click)="delete(flight.flight_number)" onclick="window.location='http://localhost:4200/ViewAllFlights'">Delete Flight</button>
                         </td>
                     </tr>
                     <tr class="tbt">
