--- a/src/app/components/updateflight/updateflight.component.html
+++ b/src/app/components/updateflight/updateflight.component.html
@@ -5,22 +5,22 @@
                 <h2 class="h2">Update Flight</h2><br>
                 <div class="form-group">
                     <div class="row">
-                        <label for="FlightNumber" class="col-sm-3 control-label">Flight Number</label>
-                        <div class="col-sm-9" id="FlightNumber" ><input type ="text" name="FlightNumber" class="form-control" placeholder="Flight Number" pattern="^[0-9]*$" required minlength="4" maxlength="4" #FlightNumber="ngModel"
-                            [(ngModel)]="updateflight.FlightNumber">
-                                <div
-                                *ngIf="!FlightNumber?.valid && (FlightNumber?.dirty ||FlightNumber?.touched)" class="errors">
-                                <div *ngIf="FlightNumber.errors.required">
-                                <span class="msg">&#9888; Flight Number is required</span>
-                                </div>
-                                <div *ngIf="FlightNumber.errors.minlength">
-                                    <span class="msg">&#9888; Min Length is 4</span>
-                                </div>
-                                <div *ngIf="FlightNumber.errors.pattern">
-                                    <span class="msg">&#9888; Enter only digits</span>
-                                </div>
-                                </div>
+                        <label for="flight_number" class="col-sm-3 control-label">Flight Number</label>
+                        <div class="col-sm-9" id="flight_number" ><input type ="text" name="flight_number" class="form-control" placeholder="Flight Number" pattern="^[0-9]*$" required minlength="4" maxlength="4" #flight_number="ngModel"
+                            [(ngModel)]="updateflight.flight_number">
+                        <div
+                        *ngIf="!flight_number?.valid && (flight_number?.dirty ||flight_number?.touched)" class="errors">
+                        <div *ngIf="flight_number.errors.required">
+                        <span class="msg">&#9888; Flight Number is required</span>
                         </div>
+                        <div *ngIf="flight_number.errors.minlength">
+                            <span class="msg">&#9888; Min Length is 4</span>
+                        </div>
+                        <div *ngIf="flight_number.errors.pattern">
+                            <span class="msg">&#9888; Enter only digits</span>
+                        </div>
+                        </div>
+                    </div>
                     </div><br>
 
                     <div class="row">
@@ -29,7 +29,7 @@
                             <select type ="type" name="departure_location" class="form-control" required #departure_location="ngModel"
                             [(ngModel)]="updateflight.departure_location">
                             <option value="" disabled selected>Select Origin</option>
-                            <option *ngFor="let city of citydata" [value]="city.city_name + ' (' + city.IATA_code + ')'">
+                            <option *ngFor="let city of citydata" [value]="city.city_name">
                                 {{city.city_name + ' (' + city.IATA_code + ')'}}
                             <option>
                                 
@@ -50,7 +50,7 @@
                             <select type ="type" name="arrival_location" class="form-control" required #arrival_location="ngModel"
                             [(ngModel)]="updateflight.arrival_location">
                                 <option value="" disabled selected>Select Destination</option>
-                                <option *ngFor="let city of citydata" [value]="city.city_name + ' (' + city.IATA_code + ')'">
+                                <option *ngFor="let city of citydata" [value]="city.city_name">
                                     {{city.city_name + ' (' + city.IATA_code + ')'}}
                                 <option>
                             </select>
