--- a/src/app/components/viewallflights/viewallflights.component.html
+++ b/src/app/components/viewallflights/viewallflights.component.html
@@ -26,15 +26,15 @@
             <tbody>
                 
                 <tr class="tr" *ngFor="let flight of flights | filter:searchText">
-                    <td class="td">{{flight.FlightNumber}}</td>
+                    <td class="td">{{flight.flight_number}}</td>
                     <td class="td">{{flight.departure_location}}</td>
                     <td class="td">{{flight.departure_time}}</td>
                     <td class="td">{{flight.arrival_location}}</td>
                     <td class="td">{{flight.arrival_time}}</td>
                     <td class="td">{{flight.duration}}</td>
                     <td class="td">
-                        <button class="bt update" [routerLink]="['/updateflight/', flight.FlightNumber]">Update</button><br>
-                        <button class="bt delete" [routerLink]="['/deleteflight/', flight.FlightNumber]">Delete</button>
+                        <button class="bt update" [routerLink]="['/updateflight/', flight.flight_number]">Update</button><br>
+                        <button class="bt delete" [routerLink]="['/deleteflight/', flight.flight_number]">Delete</button>
                     </td>
                 
                 </tr>
