error-page-commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<app-adminnavigation></app-adminnavigation>
-<router-outlet></router-outlet>
+<!-- <app-adminnavigation></app-adminnavigation> -->
+<!-- <app-adminlogin></app-adminlogin>
+<app-addflight></app-addflight> 
+<app-page-not-found></app-page-not-found>
+<app-login></app-login>
+-->
 
+
+<router-outlet></router-outlet> 
 
 
