update seatui.html,seatui.ts add submit button functionality

--- a/src/app/components/seatui/seatui.component.html
+++ b/src/app/components/seatui/seatui.component.html
@@ -93,7 +93,7 @@
     </div>
 
     <div class="footer--right">
-        <button class="confirmseat">Confirm Seats</button>
+        <button class="confirmseat" (click) = "onSubmit()">Confirm Seats</button>
     </div>
 </footer>
 
