update passengers.html,passenger.ts disable submit button till data is entered

--- a/src/app/components/passengers/passengers.component.html
+++ b/src/app/components/passengers/passengers.component.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="buttons">
                         <span (click) = "onAdd()" class="passengerdetails--addpassengers" *ngIf = "count<flightselected.number_of_seats">+ Add Passenger</span>
-                        <button type="submit" class="passenger--submit">Continue</button>
+                        <button type="submit" class="passenger--submit" [disabled] = "count!=flightselected.number_of_seats">Continue</button>
                     </div>
                     
                 </form>
