update airplanecard.html,airplanecard.ts generate price dynamically also check if departure time >3

--- a/src/app/components/airplanecard/airplanecard.component.html
+++ b/src/app/components/airplanecard/airplanecard.component.html
@@ -1,5 +1,5 @@
 <div class="card" *ngFor = "let a of flightdetails">
-    <div class="card__section card__flight">
+    <div class="card__section card__flight" *ngIf = "checktime(a.departure_time)">
         <div class="card__flight--logo">
             <img src="../../assets/logo.png" style="height: 6rem;">
         </div>
@@ -31,10 +31,10 @@
     </div>
     <div class="card__section card__booking">
         <div class="card__booking--price" *ngIf = "classstate==false">
-           {{ '₹' +  a.economy_price}}
+           ₹ {{calculate_price(a.economy_price)}}
         </div>
         <div class="card__booking--price" *ngIf = "classstate==true">
-            {{ '₹' +  a.business_price}}
+            ₹ {{calculate_price(a.business_price)}}
          </div>
         <div class="card__booking--book">
             <button class="book" (click) = "onBookNow(a.flight_number,a.departure_location,a.arrival_location)">Book Now</button>
