update passenger.html render fare summary if it exists

--- a/src/app/components/passengers/passengers.component.html
+++ b/src/app/components/passengers/passengers.component.html
@@ -52,7 +52,7 @@
             </section>
         
     </div>
-    <div class="fare">
+    <div class="fare" *ngIf = "seatprice != undefined">
         <section class="fare-section">
             <p class="heading">Fare Summary</p>
 
